--- a/runner-init.sh.template
+++ b/runner-init.sh.template
@@ -3,6 +3,8 @@ set -e
 
 # The cloud-init script used when spawning a Jetstream runner
 
+RUNNER_URL=https://github.com/actions/runner/releases/download/v2.320.1/actions-runner-linux-x64-2.320.1.tar.gz
+
 # Deregister runner on shutdown
 cleanup() {
     if [[ -e ./configsh ]] ; then
@@ -20,7 +22,7 @@ apt update && apt install -y curl jq
 cd /home/ubuntu
 mkdir actions-runner && cd actions-runner
 
-curl -o actions-runner-linux-x64.tar.gz -L https://github.com/actions/runner/archive/refs/tags/v2.320.1.tar.gz
+curl -o actions-runner-linux-x64.tar.gz -L $RUNNER_URL
 tar xzf actions-runner-linux-x64.tar.gz
 
 # Get a registration token
