--- a/runner-init.sh.template
+++ b/runner-init.sh.template
@@ -36,5 +36,6 @@ RUNNER_TOKEN=$(curl -sX POST -H "Authorization: token $GH_PAT" \
     | jq -r .token)
 
 # Configure and run the runner
+export RUNNER_ALLOW_RUNASROOT=1
 ./config.sh --url "https://github.com/$GH_OWNER/$GH_REPO" --token $RUNNER_TOKEN --unattended --name "jetstream-runner"
 ./run.sh
