--- a/runner-init.sh.template
+++ b/runner-init.sh.template
@@ -4,15 +4,19 @@ set -e
 # The cloud-init script used when spawning a Jetstream runner
 
 RUNNER_URL=https://github.com/actions/runner/releases/download/v2.320.1/actions-runner-linux-x64-2.320.1.tar.gz
+RUNNER_SERVER=http://149.165.174.68
+
+VM_NAME=__VM_NAME__
 
 # Deregister runner on shutdown
 cleanup() {
     if [[ -e ./configsh ]] ; then
       ./config.sh remove --token $RUNNER_TOKEN
     fi
-    shutdown -h now
+    #shutdown -h now
+    curl -X DELETE "$RUNNER_SERVER/cleanup/$VM_NAME"
 }
-#trap cleanup EXIT
+trap cleanup EXIT
 
 
 # Install dependencies
