--- a/runner-init.sh.template
+++ b/runner-init.sh.template
@@ -3,18 +3,22 @@ set -e
 
 # The cloud-init script used when spawning a Jetstream runner
 
-RUNNER_URL=https://github.com/actions/runner/releases/download/v2.320.1/actions-runner-linux-x64-2.320.1.tar.gz
-RUNNER_SERVER=http://149.165.174.68
+DOWNLOAD_URL=https://github.com/actions/runner/releases/download/v2.320.1/actions-runner-linux-x64-2.320.1.tar.gz
+RUNNER_SERVER=http://149.165.174.68:5000
 
+
+# These values will be injected by the runner server when it receives a workflow_job request from GitHub.
 VM_NAME=__VM_NAME__
 LABELS=__LABELS__
 
 # Deregister runner on shutdown
 cleanup() {
     if [[ -e ./configsh ]] ; then
+      echo "Deregistering runner..."
       ./config.sh remove --token $RUNNER_TOKEN
     fi
     #shutdown -h now
+    echo "Sending a DELETE request to the runner server..."
     curl -X DELETE "$RUNNER_SERVER/cleanup/$VM_NAME"
 }
 trap cleanup EXIT
@@ -23,16 +27,18 @@ trap cleanup EXIT
 # Install dependencies
 apt update && apt install -y curl jq
 
-# Download GitHub Actions Runner
+# Download and unpack the GitHub Actions Runner
 cd /home/ubuntu
 mkdir actions-runner && cd actions-runner
-
-curl -o actions-runner-linux-x64.tar.gz -L $RUNNER_URL
+curl -o actions-runner-linux-x64.tar.gz -L $DOWNLOAD_URL
 tar xzf actions-runner-linux-x64.tar.gz
 
 # Get a registration token
+#- TODO: these should be parameterized from the workflow_job payload
 GH_OWNER="ksuderman"
 GH_REPO="galaxy-k8s-action-example-1"
+
+# This will be injected by the runner server when the VM is spawned
 GH_PAT="__GITHUB_TOKEN__"
 
 RUNNER_TOKEN=$(curl -sX POST -H "Authorization: token $GH_PAT" \
