--- a/runner-init.sh.template
+++ b/runner-init.sh.template
@@ -48,5 +48,5 @@ RUNNER_TOKEN=$(curl -sX POST -H "Authorization: token $GH_PAT" \
 export RUNNER_ALLOW_RUNASROOT=1
 export RUNNER_MANUALLY_TRAP_SIG=1
 tag=$(cat /dev/urandom | tr -dc 'a-f0-9' | head -c 8)
-./config.sh --url "https://github.com/$GH_OWNER/$GH_REPO" --token $RUNNER_TOKEN --unattended --name "jetstream-runner-$tag" --labels $LABELS
+./config.sh --url "https://github.com/$GH_OWNER/$GH_REPO" --token $RUNNER_TOKEN --unattended --ephemeral--name "jetstream-runner-$tag" --labels $LABELS
 ./run.sh
